// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SummarySpendBreakdown component renders correctly 1`] = `
<div>
  <div
    class="pt-4 lg:pl-7 lg:pt-0 lg:pb-0"
  >
    <h5
      class="text-xl md:text-2xl text-gray-800 font-bold px-4 lg:p-0"
    >
      Spending Breakdown
    </h5>
    <div
      class="flex items-center lg:flex-row flex-col"
    >
      <div
        class="lg:w-4/12 print:hidden w-3/4 px-4 lg:p-0 flex justify-center"
      >
        <div
          class="h-0 pt-[100%] overflow-hidden relative flex-none my-10 w-full"
        >
          <div
            class="after:absolute after:bg-white after:rounded-full after:top-2/4 after:left-2/4 after:-translate-y-2/4 after:-translate-x-2/4 after:h-[55%] after:w-[55%] rounded-full w-full h-full absolute left-0 right-0 top-0 bottom-0"
            style="background: conic-gradient(#007a91 0% 40%, #f56727 40% 75%, #bc0061 75% 85%, #879a24 85% 95%, #000d3d 95% 97.5%, #0b4a6d 97.5% 100%);"
          />
        </div>
      </div>
      <div
        class="w-full lg:w-8/12"
      >
        <table
          class="w-full border-separate lg:text-lg border-spacing-2 lg:border-spacing-5 lg:ml-10"
        >
          <thead>
            <tr>
              <th
                class="lg:w-9/12"
              >
                <span
                  class="sr-only"
                >
                  Category
                </span>
              </th>
              <th
                class="hidden lg:w-1/12"
              >
                <span
                  class="sr-only"
                >
                  Percentage
                </span>
              </th>
              <th
                class="hidden lg:w-1/12"
              >
                <span
                  class="sr-only"
                >
                  Info
                </span>
              </th>
              <th
                class="text-right lg:w-1/12"
              >
                <span
                  class="sr-only"
                >
                  Cost
                </span>
              </th>
              <th
                class="lg:w-1/12 print:hidden"
              >
                <span
                  class="sr-only"
                >
                  Edit
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="align-top"
          >
            <tr>
              <td
                class="align-middle"
              >
                <div
                  class="flex items-start flex-grow"
                >
                  <span
                    class="print:hidden rounded-full h-[18px] w-[18px] md:h-[30px] md:w-[30px] mt-1 md:mt-0 flex-none"
                    style="background-color: rgb(0, 122, 145);"
                  />
                  <span
                    class="ml-[8px]"
                  >
                    Household bills
                  </span>
                </div>
              </td>
              <td
                class="hidden text-right align-middle print:block"
              >
                40
                %
              </td>
              <td
                class="hidden text-center align-middle print:hidden xlg:table-cell"
              >
                <svgr-mock
                  class="w-[24px] h-[24px]"
                />
              </td>
              <td
                class="flex justify-end font-bold text-right align-top items-top lg:table-cell"
              >
                <span
                  class="pl-4 pr-2 md:px-4 py-2 lg:hidden"
                >
                  £
                  875.00
                </span>
              </td>
              <td
                class="text-right align-top print:hidden lg:hidden"
              >
                <div
                  class="mt-[7px]"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Household bills
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="hidden text-left pl-[24px] justify-start items-top align-top font-bold lg:table-cell"
              >
                <div
                  class="mt-[-14px]"
                >
                  <span
                    class="py-10 pl-4 pr-2"
                  >
                    £
                    875.00
                  </span>
                </div>
              </td>
              <td
                class="justify-end hidden text-right align-top items-top print:hidden lg:table-cell"
              >
                <div
                  class="mt-[-17px] mb-2"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Household bills
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="align-middle"
              >
                <div
                  class="flex items-start flex-grow"
                >
                  <span
                    class="print:hidden rounded-full h-[18px] w-[18px] md:h-[30px] md:w-[30px] mt-1 md:mt-0 flex-none"
                    style="background-color: rgb(245, 103, 39);"
                  />
                  <span
                    class="ml-[8px]"
                  >
                    Living costs
                  </span>
                </div>
              </td>
              <td
                class="hidden text-right align-middle print:block"
              >
                35
                %
              </td>
              <td
                class="hidden text-center align-middle print:hidden xlg:table-cell"
              >
                <svgr-mock
                  class="w-[24px] h-[24px]"
                />
              </td>
              <td
                class="flex justify-end font-bold text-right align-top items-top lg:table-cell"
              >
                <span
                  class="pl-4 pr-2 md:px-4 py-2 lg:hidden"
                >
                  £
                  771.28
                </span>
              </td>
              <td
                class="text-right align-top print:hidden lg:hidden"
              >
                <div
                  class="mt-[7px]"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Living costs
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="hidden text-left pl-[24px] justify-start items-top align-top font-bold lg:table-cell"
              >
                <div
                  class="mt-[-14px]"
                >
                  <span
                    class="py-10 pl-4 pr-2"
                  >
                    £
                    771.28
                  </span>
                </div>
              </td>
              <td
                class="justify-end hidden text-right align-top items-top print:hidden lg:table-cell"
              >
                <div
                  class="mt-[-17px] mb-2"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Living costs
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="align-middle"
              >
                <div
                  class="flex items-start flex-grow"
                >
                  <span
                    class="print:hidden rounded-full h-[18px] w-[18px] md:h-[30px] md:w-[30px] mt-1 md:mt-0 flex-none"
                    style="background-color: rgb(188, 0, 97);"
                  />
                  <span
                    class="ml-[8px]"
                  >
                    Finance & Insurance
                  </span>
                </div>
              </td>
              <td
                class="hidden text-right align-middle print:block"
              >
                10
                %
              </td>
              <td
                class="hidden text-center align-middle print:hidden xlg:table-cell"
              >
                <svgr-mock
                  class="w-[24px] h-[24px]"
                />
              </td>
              <td
                class="flex justify-end font-bold text-right align-top items-top lg:table-cell"
              >
                <span
                  class="pl-4 pr-2 md:px-4 py-2 lg:hidden"
                >
                  £
                  100.00
                </span>
              </td>
              <td
                class="text-right align-top print:hidden lg:hidden"
              >
                <div
                  class="mt-[7px]"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Finance & Insurance
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="hidden text-left pl-[24px] justify-start items-top align-top font-bold lg:table-cell"
              >
                <div
                  class="mt-[-14px]"
                >
                  <span
                    class="py-10 pl-4 pr-2"
                  >
                    £
                    100.00
                  </span>
                </div>
              </td>
              <td
                class="justify-end hidden text-right align-top items-top print:hidden lg:table-cell"
              >
                <div
                  class="mt-[-17px] mb-2"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Finance & Insurance
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="align-middle"
              >
                <div
                  class="flex items-start flex-grow"
                >
                  <span
                    class="print:hidden rounded-full h-[18px] w-[18px] md:h-[30px] md:w-[30px] mt-1 md:mt-0 flex-none"
                    style="background-color: rgb(135, 154, 36);"
                  />
                  <span
                    class="ml-[8px]"
                  >
                    Family & Friends
                  </span>
                </div>
              </td>
              <td
                class="hidden text-right align-middle print:block"
              >
                10
                %
              </td>
              <td
                class="hidden text-center align-middle print:hidden xlg:table-cell"
              >
                <svgr-mock
                  class="w-[24px] h-[24px]"
                />
              </td>
              <td
                class="flex justify-end font-bold text-right align-top items-top lg:table-cell"
              >
                <span
                  class="pl-4 pr-2 md:px-4 py-2 lg:hidden"
                >
                  £
                  100.00
                </span>
              </td>
              <td
                class="text-right align-top print:hidden lg:hidden"
              >
                <div
                  class="mt-[7px]"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Family & Friends
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="hidden text-left pl-[24px] justify-start items-top align-top font-bold lg:table-cell"
              >
                <div
                  class="mt-[-14px]"
                >
                  <span
                    class="py-10 pl-4 pr-2"
                  >
                    £
                    100.00
                  </span>
                </div>
              </td>
              <td
                class="justify-end hidden text-right align-top items-top print:hidden lg:table-cell"
              >
                <div
                  class="mt-[-17px] mb-2"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Family & Friends
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="align-middle"
              >
                <div
                  class="flex items-start flex-grow"
                >
                  <span
                    class="print:hidden rounded-full h-[18px] w-[18px] md:h-[30px] md:w-[30px] mt-1 md:mt-0 flex-none"
                    style="background-color: rgb(0, 13, 61);"
                  />
                  <span
                    class="ml-[8px]"
                  >
                    Travel
                  </span>
                </div>
              </td>
              <td
                class="hidden text-right align-middle print:block"
              >
                2.5
                %
              </td>
              <td
                class="hidden text-center align-middle print:hidden xlg:table-cell"
              >
                <svgr-mock
                  class="w-[24px] h-[24px]"
                />
              </td>
              <td
                class="flex justify-end font-bold text-right align-top items-top lg:table-cell"
              >
                <span
                  class="pl-4 pr-2 md:px-4 py-2 lg:hidden"
                >
                  £
                  10.00
                </span>
              </td>
              <td
                class="text-right align-top print:hidden lg:hidden"
              >
                <div
                  class="mt-[7px]"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Travel
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="hidden text-left pl-[24px] justify-start items-top align-top font-bold lg:table-cell"
              >
                <div
                  class="mt-[-14px]"
                >
                  <span
                    class="py-10 pl-4 pr-2"
                  >
                    £
                    10.00
                  </span>
                </div>
              </td>
              <td
                class="justify-end hidden text-right align-top items-top print:hidden lg:table-cell"
              >
                <div
                  class="mt-[-17px] mb-2"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Travel
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="align-middle"
              >
                <div
                  class="flex items-start flex-grow"
                >
                  <span
                    class="print:hidden rounded-full h-[18px] w-[18px] md:h-[30px] md:w-[30px] mt-1 md:mt-0 flex-none"
                    style="background-color: rgb(11, 74, 109);"
                  />
                  <span
                    class="ml-[8px]"
                  >
                    Leisure
                  </span>
                </div>
              </td>
              <td
                class="hidden text-right align-middle print:block"
              >
                2.5
                %
              </td>
              <td
                class="hidden text-center align-middle print:hidden xlg:table-cell"
              >
                <svgr-mock
                  class="w-[24px] h-[24px]"
                />
              </td>
              <td
                class="flex justify-end font-bold text-right align-top items-top lg:table-cell"
              >
                <span
                  class="pl-4 pr-2 md:px-4 py-2 lg:hidden"
                >
                  £
                  10.00
                </span>
              </td>
              <td
                class="text-right align-top print:hidden lg:hidden"
              >
                <div
                  class="mt-[7px]"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Leisure
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="hidden text-left pl-[24px] justify-start items-top align-top font-bold lg:table-cell"
              >
                <div
                  class="mt-[-14px]"
                >
                  <span
                    class="py-10 pl-4 pr-2"
                  >
                    £
                    10.00
                  </span>
                </div>
              </td>
              <td
                class="justify-end hidden text-right align-top items-top print:hidden lg:table-cell"
              >
                <div
                  class="mt-[-17px] mb-2"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Leisure
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`SummarySpendBreakdown component renders correctly as estimate 1`] = `
<div>
  <div
    class="pt-4 lg:pl-7 lg:pt-0 lg:pb-0"
  >
    <h5
      class="text-xl md:text-2xl text-gray-800 font-bold px-4 lg:p-0"
    >
      Spending Breakdown
    </h5>
    <div
      class="flex items-center lg:flex-row flex-col"
    >
      <div
        class="lg:w-4/12 print:hidden w-3/4 px-4 lg:p-0 flex justify-center"
      >
        <div
          class="h-0 pt-[100%] overflow-hidden relative flex-none my-10 w-full"
        >
          <div
            class="after:absolute after:bg-white after:rounded-full after:top-2/4 after:left-2/4 after:-translate-y-2/4 after:-translate-x-2/4 after:h-[55%] after:w-[55%] rounded-full w-full h-full absolute left-0 right-0 top-0 bottom-0"
          />
        </div>
      </div>
      <div
        class="w-full lg:w-8/12"
      >
        <table
          class="w-full border-separate lg:text-lg border-spacing-2 lg:border-spacing-5 lg:ml-10"
        >
          <thead>
            <tr>
              <th
                class="lg:w-9/12"
              >
                <span
                  class="sr-only"
                >
                  Category
                </span>
              </th>
              <th
                class="hidden lg:w-1/12"
              >
                <span
                  class="sr-only"
                >
                  Percentage
                </span>
              </th>
              <th
                class="hidden lg:w-1/12"
              >
                <span
                  class="sr-only"
                >
                  Info
                </span>
              </th>
              <th
                class="text-right lg:w-1/12"
              >
                <span
                  class="sr-only"
                >
                  Cost
                </span>
              </th>
              <th
                class="lg:w-1/12 print:hidden"
              >
                <span
                  class="sr-only"
                >
                  Edit
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="align-top"
          >
            <tr>
              <td
                class="align-middle"
              >
                <div
                  class="flex items-start flex-grow"
                >
                  <span
                    class="print:hidden rounded-full h-[18px] w-[18px] md:h-[30px] md:w-[30px] mt-1 md:mt-0 flex-none"
                    style="background-color: rgb(0, 13, 61);"
                  />
                  <span
                    class="ml-[8px]"
                  >
                    Travel
                  </span>
                </div>
              </td>
              <td
                class="hidden text-right align-middle print:block"
              >
                2.5
                %
              </td>
              <td
                class="hidden text-center align-middle print:hidden xlg:table-cell"
              >
                <svgr-mock
                  class="w-[24px] h-[24px]"
                />
              </td>
              <td
                class="flex justify-end font-bold text-right align-top items-top lg:table-cell"
              >
                <span
                  class="text-right bg-gray-100 border-l-4 border-amber-500 rounded px-2 py-2"
                >
                  £
                  100.00
                </span>
              </td>
              <td
                class="text-right align-top print:hidden lg:hidden"
              >
                <div
                  class="mt-[7px]"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Travel
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="hidden text-left pl-[24px] justify-start items-top align-top font-bold lg:table-cell"
              >
                <div
                  class="mt-[-14px]"
                >
                  <span
                    class="py-10 pl-4 pr-2"
                  >
                    £
                    100.00
                  </span>
                </div>
              </td>
              <td
                class="justify-end hidden text-right align-top items-top print:hidden lg:table-cell"
              >
                <div
                  class="mt-[-17px] mb-2"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Travel
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`SummarySpendBreakdown component renders correctly with tick 1`] = `
<div>
  <div
    class="pt-4 lg:pl-7 lg:pt-0 lg:pb-0"
  >
    <h5
      class="text-xl md:text-2xl text-gray-800 font-bold px-4 lg:p-0"
    >
      Spending Breakdown
    </h5>
    <div
      class="flex items-center lg:flex-row flex-col"
    >
      <div
        class="lg:w-4/12 print:hidden w-3/4 px-4 lg:p-0 flex justify-center"
      >
        <div
          class="h-0 pt-[100%] overflow-hidden relative flex-none my-10 w-full"
        >
          <div
            class="after:absolute after:bg-white after:rounded-full after:top-2/4 after:left-2/4 after:-translate-y-2/4 after:-translate-x-2/4 after:h-[55%] after:w-[55%] rounded-full w-full h-full absolute left-0 right-0 top-0 bottom-0"
          />
        </div>
      </div>
      <div
        class="w-full lg:w-8/12"
      >
        <table
          class="w-full border-separate lg:text-lg border-spacing-2 lg:border-spacing-5 lg:ml-10"
        >
          <thead>
            <tr>
              <th
                class="lg:w-9/12"
              >
                <span
                  class="sr-only"
                >
                  Category
                </span>
              </th>
              <th
                class="hidden lg:w-1/12"
              >
                <span
                  class="sr-only"
                >
                  Percentage
                </span>
              </th>
              <th
                class="hidden lg:w-1/12"
              >
                <span
                  class="sr-only"
                >
                  Info
                </span>
              </th>
              <th
                class="text-right lg:w-1/12"
              >
                <span
                  class="sr-only"
                >
                  Cost
                </span>
              </th>
              <th
                class="lg:w-1/12 print:hidden"
              >
                <span
                  class="sr-only"
                >
                  Edit
                </span>
              </th>
            </tr>
          </thead>
          <tbody
            class="align-top"
          >
            <tr>
              <td
                class="align-middle"
              >
                <div
                  class="flex items-start flex-grow"
                >
                  <span
                    class="print:hidden rounded-full h-[18px] w-[18px] md:h-[30px] md:w-[30px] mt-1 md:mt-0 flex-none"
                    style="background-color: rgb(135, 154, 36);"
                  />
                  <span
                    class="ml-[8px]"
                  >
                    Family & Friends
                  </span>
                </div>
              </td>
              <td
                class="hidden text-right align-middle print:block"
              >
                10
                %
              </td>
              <td
                class="hidden text-center align-middle print:hidden xlg:table-cell"
              >
                <svgr-mock
                  class="w-[24px] h-[24px]"
                />
              </td>
              <td
                class="flex justify-end font-bold text-right align-top items-top lg:table-cell"
              >
                <span
                  class="pl-4 pr-2 md:px-4 py-2 lg:hidden"
                >
                  £
                  100.00
                </span>
                <svgr-mock
                  class="w-[20px]"
                  fill="green"
                />
              </td>
              <td
                class="text-right align-top print:hidden lg:hidden"
              >
                <div
                  class="mt-[7px]"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Family & Friends
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
            <tr>
              <td
                class="hidden text-left pl-[24px] justify-start items-top align-top font-bold lg:table-cell"
              >
                <div
                  class="mt-[-14px]"
                >
                  <span
                    class="py-10 pl-4 pr-2"
                  >
                    £
                    100.00
                  </span>
                </div>
              </td>
              <td
                class="justify-end hidden text-right align-top items-top print:hidden lg:table-cell"
              >
                <div
                  class="mt-[-17px] mb-2"
                >
                  <button
                    class="inline-flex items-center gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button tool-nav-submit"
                    formaction="/cost-tab"
                    type="submit"
                  >
                    <span />
                    Edit
                    <span
                      class="sr-only"
                    >
                      Family & Friends
                    </span>
                    <span />
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
